# emissiongraph

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  package.json  railway.json
compute/: Dockerfile  pyproject.toml
compute/emissiongraph/: __init__.py
compute/emissiongraph/api/: routes.py
compute/emissiongraph/attribution/: fleet.py  spatial.py  temporal.py  tree.py
compute/emissiongraph/facts/: schema.py
compute/emissiongraph/graph/: builder.py  queries.py  schema.py
compute/emissiongraph/ingestion/: cargo_parser.py  emission_parser.py  gri_parser.py  workbook_loader.py
compute/emissiongraph/narrative/: generator.py  templates.py  validator.py
compute/emissiongraph/registry/: factors.py  fuels.py
compute/tests/: conftest.py  test_determinism.py  test_eval_parser.py  test_graph.py  test_validator.py
convex/: attributionRuns.ts  fuelRegistry.ts  measurements.ts  narratives.ts  schema.ts
convex/actions/: runAttribution.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: api.ts  index.css  main.tsx
frontend/src/components/: CellDrillDown.tsx
frontend/src/pages/: Comparison.tsx  FleetDashboard.tsx  Ingest.tsx  PortDetail.tsx  Query.tsx
