[project]
name = "emissiongraph"
version = "0.1.0"
description = "Port infrastructure emissions attribution engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "openpyxl>=3.1.2",
    "pandas>=2.2.0",
    "networkx>=3.2",
    "pydantic>=2.6.0",
    "openai>=1.30.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "hypothesis>=6.98.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
